# POWChallenge

./: .gitignore  Makefile  README.md  package.json
.github/workflows/: test.yml
client-js/: README.md  package.json  tsconfig.json  wasm-loader.js  webpack.config.js
client-js/example/: index.html
client-js/src/: index.ts
examples/nextjs-demo/: README.md  next.config.ts  package.json
examples/nextjs-demo/prisma/: schema.prisma
examples/nextjs-demo/scripts/: clear-db.ts
examples/nextjs-demo/src/app/: page.tsx
examples/nextjs-demo/src/app/api/pow/challenge/: route.ts
examples/nextjs-demo/src/app/api/pow/verify/: route.ts
examples/nextjs-demo/src/components/: PowDemo.tsx
examples/nextjs-demo/src/lib/: PrismaStorage.ts  pow.ts
scripts/: bump_version.js
servers/js/: README.md  package.json  tsconfig.json
servers/js/example/express/: package.json  server.js
servers/js/example/prisma_storage/: README.md  package.json  prisma_storage.ts  server.ts
servers/js/example/prisma_storage/prisma/: dev.db  schema.prisma
servers/js/src/: index.js  index.ts  storage.ts
servers/python/: .gitignore  README.md  cli_wrapper.py  pyproject.toml
servers/python/example/fastapi/: index.html  server.py
servers/python/pow_captcha_server/: core.py  interfaces.py  storage.py
servers/python/powchallenge_server/: __init__.py  core.py  interfaces.py  storage.py
servers/rust/: Cargo.toml  README.md
servers/rust/example/axum_server/: Cargo.toml
servers/rust/example/axum_server/src/: main.rs
servers/rust/src/: lib.rs  main.rs  storage.rs
tests/: e2e.js
