[package]
name = "powchallenge_server"
version = "1.0.2"
edition = "2021"
description = "Server validation library for the POW Captcha ecosystem."
repository = "https://github.com/Simon-Bertrand/POWChallenge"
license = "MIT"
keywords = ["pow", "captcha", "security", "argon2id", "bot-protection"]

[lib]
name = "powchallenge_server"
crate-type = ["rlib"]

[features]
default = []
redis = ["dep:redis"]

[dependencies]
sha2 = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.21"
uuid = { version = "1.0", features = ["v7"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = "0.4"
hex = "0.4"
parking_lot = "0.12"
constant_time_eq = "0.3"
hmac = "0.12"
redis = { version = "0.24", features = ["tokio-comp"], optional = true }
