[package]
name = "axum_server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
powchallenge_server = { path = "../../", features = ["redis"] }
tokio = { version = "1.0", features = ["full", "macros"] }
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.4", features = ["cors"] }
